@@ -24,6 +24,7 @@ case prefs[:railsapps]
     prefs[:authorization] = 'cancan'
     prefs[:starter_app] = 'admin_app'
     prefs[:form_builder] = 'simple_form'
+    prefs[:quiet_assets] = true
     if prefer :git, true
       prefs[:prelaunch_branch] = multiple_choice "Git branch for the prelaunch app?", [["wip (work-in-progress)", "wip"], ["master", "master"], ["prelaunch", "prelaunch"], ["staging", "staging"]]
       if prefs[:prelaunch_branch] == 'master'
@@ -45,7 +46,8 @@ case prefs[:railsapps]
     prefs[:devise_modules] = 'default'
     prefs[:authorization] = 'cancan'
     prefs[:starter_app] = 'admin_app'
-    prefs[:form_builder] = 'none'
+    prefs[:form_builder] = 'simple_form'
+    prefs[:quiet_assets] = true
   when 'rails3-devise-rspec-cucumber'
     prefs[:git] = true
     prefs[:database] = 'sqlite'
@@ -59,6 +61,7 @@ case prefs[:railsapps]
     prefs[:authorization] = 'none'
     prefs[:starter_app] = 'users_app'
     prefs[:form_builder] = 'none'
+    prefs[:quiet_assets] = true
   when 'rails3-mongoid-devise'
     prefs[:git] = true
     prefs[:database] = 'mongodb'
@@ -73,6 +76,7 @@ case prefs[:railsapps]
     prefs[:authorization] = 'none'
     prefs[:starter_app] = 'users_app'
     prefs[:form_builder] = 'none'
+    prefs[:quiet_assets] = true
   when 'rails3-mongoid-omniauth'
     prefs[:git] = true
     prefs[:database] = 'mongodb'
@@ -87,6 +91,7 @@ case prefs[:railsapps]
     prefs[:authorization] = 'none'
     prefs[:starter_app] = 'users_app'
     prefs[:form_builder] = 'none'
+    prefs[:quiet_assets] = true
   when 'rails3-subdomains'
     prefs[:git] = true
     prefs[:database] = 'mongodb'
@@ -101,6 +106,7 @@ case prefs[:railsapps]
     prefs[:authorization] = 'none'
     prefs[:starter_app] = 'subdomains_app'
     prefs[:form_builder] = 'none'
+    prefs[:quiet_assets] = true
 end
 
 __END__
